# tutorial-final

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: GlmCxxModule.cmake  ProjectContracts.cmake  ProjectDiagnostics.cmake  ProjectReflection.cmake  ProjectWarnings.cmake  SlangShaders.cmake  TutorialDependencies.cmake  VulkanCxxModule.cmake
libs/lbn/: CMakeLists.txt  contracts_config.hpp  contracts_handler.cpp  lbn.cpp  lbn.cppm  vertex.cppm
libs/utils/: CMakeLists.txt  vk_error_config.hpp
libs/utils/load/: load.cppm
libs/utils/utils/: utils.cppm
scripts/: Build-ClangDebug.ps1  build-debug-parallel-release.ps1  build-parallel-debug.ps1  build-parallel-release.ps1  compile-shaders.ps1
shaders/: shader.slang
src/: CMakeLists.txt  main.cpp
